--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,10 +5,9 @@ body {
   box-shadow: inset 0 0 0 0 #596c7b;
   color: #54b3d6;
   margin: 0 -.1rem;
-  padding: 0 .1rem;
+  padding: 0 0.1rem;
   transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
   color: white; }
-
-#links a:hover {
-  box-shadow: inset 100px 0 0 0 #debf4d;
-  color: white; }
+  #links a:hover {
+    box-shadow: inset 100px 0 0 0 #debf4d;
+    color: white; }
