--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,18 +1,27 @@
+
+@import "colors";
+
+$col-w: white;
+$box-padd:0 .1rem;
+
 body{
-    background-color: #0e1f2f;
+    background-color: $bk-color;
 }
+
 
 #links {
     a {
-    box-shadow: inset 0 0 0 0 #596c7b;
+    box-shadow: inset 0 0 0 0 $Color-box;
     color: #54b3d6;
     margin: 0 -.1rem;
-    padding: 0 .1rem;
+    padding: $box-padd;
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-    color: white;
-  }
-  a:hover {
+    color: $col-w;
+
+  
+  &:hover {
     box-shadow: inset 100px 0 0 0 #debf4d;
     color: white;
   }
  }
+}
